--- a/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
+++ b/VisualCrypt.Desktop.ModuleEditor/VisualCrypt.Desktop.ModuleEditor.csproj
@@ -97,6 +97,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.Portable.csproj">
+      <Project>{A0AEFEF6-E642-4247-85F6-F2F0B329D935}</Project>
+      <Name>VisualCrypt.Cryptography.Portable</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VisualCrypt.Desktop.Shared\VisualCrypt.Desktop.Shared.csproj">
       <Project>{1A98F3E7-2163-46CE-9B6A-E204FFF4F3B8}</Project>
       <Name>VisualCrypt.Desktop.Shared</Name>
