--- a/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
+++ b/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
@@ -24,7 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -44,17 +44,29 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <None Include="packages.config" />
     <None Include="YourKey.snk" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\EditorReceivesText.cs" />
+    <Compile Include="Events\EditorSendsStatusBarInfo.cs" />
+    <Compile Include="Events\EditorSendsText.cs" />
+    <Compile Include="Events\EditorShouldCleanup.cs" />
+    <Compile Include="Events\EditorShouldSendText.cs" />
+    <Compile Include="MVVM\DelegateCommand.cs" />
+    <Compile Include="MVVM\DelegateCommandBase.cs" />
+    <Compile Include="MVVM\PropertySupport.cs" />
+    <Compile Include="MVVM\ViewModelBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="VisualCrypt2\AppLogic\DialogDirection.cs" />
     <Compile Include="VisualCrypt2\AppLogic\DialogFilters.cs" />
     <Compile Include="VisualCrypt2\AppLogic\FileModel.cs" />
     <Compile Include="VisualCrypt2\AppLogic\IEncryptionService.cs" />
     <Compile Include="VisualCrypt2\AppLogic\IFileModel.cs" />
+    <Compile Include="VisualCrypt2\AppLogic\NotifyPropertyChanged.cs" />
     <Compile Include="VisualCrypt2\AppLogic\PortableConstants.cs" />
     <Compile Include="VisualCrypt2\AppLogic\SetPasswordDialogMode.cs" />
+    <Compile Include="VisualCrypt2\AppLogic\StatusBarModel.cs" />
     <Compile Include="VisualCrypt2\DataTypes\MACCipher16.cs" />
     <Compile Include="VisualCrypt2\DataTypes\MessageCipher.cs" />
     <Compile Include="VisualCrypt2\DataTypes\RandomKeyCipher32.cs" />
@@ -106,6 +118,12 @@
       <Project>{CC794610-54C9-4F5F-AC82-005260FBB8DE}</Project>
       <Name>VisualCrypt.Language</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Practices.Prism.PubSubEvents, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Prism.PubSubEvents.1.1.2\lib\portable-sl5+windowsphone8+windows8+net40+wpa81\Microsoft.Practices.Prism.PubSubEvents.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
