--- a/VisualCrypt.Desktop.ModuleEncryption/VisualCrypt.Desktop.ModuleEncryption.csproj
+++ b/VisualCrypt.Desktop.ModuleEncryption/VisualCrypt.Desktop.ModuleEncryption.csproj
@@ -25,7 +25,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
