--- a/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
+++ b/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
@@ -48,11 +48,31 @@
     <None Include="YourKey.snk" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyInfoProvider.cs" />
+    <Compile Include="IAssemblyInfoProvider.cs" />
+    <Compile Include="IBrowserService.cs" />
+    <Compile Include="IClipBoardService.cs" />
+    <Compile Include="IFileService.cs" />
+    <Compile Include="ILifeTimeService.cs" />
+    <Compile Include="ILog.cs" />
+    <Compile Include="IWindowManager.cs" />
+    <Compile Include="Settings\CryptographySettings.cs" />
+    <Compile Include="Settings\EditorSettings.cs" />
     <Compile Include="Events\EditorReceivesText.cs" />
     <Compile Include="Events\EditorSendsStatusBarInfo.cs" />
     <Compile Include="Events\EditorSendsText.cs" />
     <Compile Include="Events\EditorShouldCleanup.cs" />
     <Compile Include="Events\EditorShouldSendText.cs" />
+    <Compile Include="FilesPageCommandArgs.cs" />
+    <Compile Include="IActiveCleanup.cs" />
+    <Compile Include="IEditorContext.cs" />
+    <Compile Include="IMessageBoxService.cs" />
+    <Compile Include="INavigationService.cs" />
+    <Compile Include="IPasswordDialogDispatcher.cs" />
+    <Compile Include="Settings\ISettingsManager.cs" />
+    <Compile Include="MainPageViewModel.cs" />
+    <Compile Include="Models\FileReference.cs" />
+    <Compile Include="Models\PasswordInfo.cs" />
     <Compile Include="MVVM\DelegateCommand.cs" />
     <Compile Include="MVVM\DelegateCommandBase.cs" />
     <Compile Include="MVVM\PropertySupport.cs" />
@@ -122,6 +142,26 @@
   <ItemGroup>
     <Reference Include="Microsoft.Practices.Prism.PubSubEvents, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.PubSubEvents.1.1.2\lib\portable-sl5+windowsphone8+windows8+net40+wpa81\Microsoft.Practices.Prism.PubSubEvents.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Composition.AttributedModel, Version=1.0.30.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Composition.1.0.30\lib\portable-net45+win8+wp8+wpa81\System.Composition.AttributedModel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Composition.Convention, Version=1.0.30.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Composition.1.0.30\lib\portable-net45+win8+wp8+wpa81\System.Composition.Convention.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Composition.Hosting, Version=1.0.30.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Composition.1.0.30\lib\portable-net45+win8+wp8+wpa81\System.Composition.Hosting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Composition.Runtime, Version=1.0.30.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Composition.1.0.30\lib\portable-net45+win8+wp8+wpa81\System.Composition.Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Composition.TypedParts, Version=1.0.30.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Composition.1.0.30\lib\portable-net45+win8+wp8+wpa81\System.Composition.TypedParts.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
