--- a/VisualCrypt.Cryptography.Portable/packages.config
+++ b/VisualCrypt.Cryptography.Portable/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Composition" version="1.0.30" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Prism.PubSubEvents" version="1.1.2" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
