--- a/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
+++ b/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
@@ -49,16 +49,9 @@
     <Reference Include="Microsoft.Practices.Prism.Composition">
       <HintPath>..\packages\Prism.Composition.5.0.0\lib\NET45\Microsoft.Practices.Prism.Composition.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.Prism.Mvvm">
-      <HintPath>..\packages\Prism.Mvvm.1.1.1\lib\net45\Microsoft.Practices.Prism.Mvvm.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Practices.Prism.PubSubEvents, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Prism.PubSubEvents.1.1.2\lib\portable-sl5+windowsphone8+windows8+net40+wpa81\Microsoft.Practices.Prism.PubSubEvents.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Prism.SharedInterfaces, Version=1.1.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Prism.Mvvm.1.1.1\lib\net45\Microsoft.Practices.Prism.SharedInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -75,27 +68,22 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App\WindowManager.cs" />
     <Compile Include="PrismSupport\ParamsProvider.cs" />
     <Compile Include="Commands\EditorCommands.cs" />
     <Compile Include="Controls\AppDialog.cs" />
     <Compile Include="Controls\AppWindow.cs" />
-    <Compile Include="Files\BindableFileInfo.cs" />
-    <Compile Include="Files\BindablePasswordInfo.cs" />
-    <Compile Include="Files\FileManager.cs" />
-    <Compile Include="Files\FileModel.cs" />
-    <Compile Include="Files\PasswordManager.cs" />
+    <Compile Include="Files\FileService.cs" />
     <Compile Include="PrismSupport\IEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PrismSupport\RegionNames.cs" />
-    <Compile Include="Services\IMessageBoxService.cs" />
+    <Compile Include="Services\BrowserService.cs" />
+    <Compile Include="Services\ClipBoardService.cs" />
+    <Compile Include="Services\LifeTimeService.cs" />
     <Compile Include="Services\MessageBoxService.cs" />
-    <Compile Include="Settings\CryptographySettings.cs" />
     <Compile Include="Settings\FontSettings.cs" />
     <Compile Include="Settings\FontSizeListItem.cs" />
     <Compile Include="Settings\Map.cs" />
     <Compile Include="App\Constants.cs" />
-    <Compile Include="App\EditorSettings.cs" />
     <Compile Include="App\SettingsManager.cs" />
     <Compile Include="App\Serializer.cs" />
     <Compile Include="Settings\OnFirstRunTasks.cs" />
@@ -104,7 +92,6 @@
     <Compile Include="ValueConverters\BoolVisibilityConverter.cs" />
     <Compile Include="ValueConverters\ThicknessToDoubleConverter.cs" />
     <Compile Include="Version.cs" />
-    <Compile Include="PrismSupport\ViewModelBase.cs" />
     <Compile Include="PrismSupport\ModuleNames.cs" />
   </ItemGroup>
   <ItemGroup>
