Update all projects to .net 4.6

--- a/VisualCrypt.Windows/project.json
+++ b/VisualCrypt.Windows/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
+    "CommonServiceLocator": "1.3.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Prism.Mvvm": "1.1.1",
     "Prism.PubSubEvents": "1.1.2"
   },
   "frameworks": {
