--- a/VisualCrypt.Cryptography.UWP/project.json
+++ b/VisualCrypt.Cryptography.UWP/project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "CommonServiceLocator": "1.3.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Prism.Mvvm": "1.1.1",
+    "Prism.PubSubEvents": "1.1.2"
   },
   "frameworks": {
     "uap10.0": {}
