--- a/Cryptography/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
+++ b/Cryptography/VisualCrypt.Cryptography.Portable/VisualCrypt.Cryptography.Portable.csproj
@@ -48,46 +48,10 @@
     <None Include="YourKey.snk" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Apps\Services\AssemblyInfoProvider.cs" />
-    <Compile Include="Apps\Events\FileModelChanged.cs" />
-    <Compile Include="Apps\Services\IAssemblyInfoProvider.cs" />
-    <Compile Include="Apps\Services\IBrowserService.cs" />
-    <Compile Include="Apps\Services\IClipBoardService.cs" />
-    <Compile Include="Apps\Services\IFileService.cs" />
-    <Compile Include="Apps\Services\ILifeTimeService.cs" />
-    <Compile Include="Apps\Services\ILog.cs" />
-    <Compile Include="Apps\Services\IWindowManager.cs" />
-    <Compile Include="Apps\Settings\CryptographySettings.cs" />
-    <Compile Include="Apps\Settings\EditorSettings.cs" />
-    <Compile Include="Apps\Events\EditorReceivesText.cs" />
-    <Compile Include="Apps\Events\EditorSendsStatusBarInfo.cs" />
-    <Compile Include="Apps\Events\EditorSendsText.cs" />
-    <Compile Include="Apps\Events\EditorShouldCleanup.cs" />
-    <Compile Include="Apps\Events\EditorShouldSendText.cs" />
-    <Compile Include="Apps\Models\FilesPageCommandArgs.cs" />
-    <Compile Include="Apps\ViewModels\IActiveCleanup.cs" />
-    <Compile Include="Apps\ViewModels\IEditorContext.cs" />
-    <Compile Include="Apps\Services\IMessageBoxService.cs" />
-    <Compile Include="Apps\Services\INavigationService.cs" />
-    <Compile Include="Apps\Services\IPasswordDialogDispatcher.cs" />
-    <Compile Include="Apps\Settings\ISettingsManager.cs" />
-    <Compile Include="Apps\ViewModels\PortableMainViewModel.cs" />
-    <Compile Include="Apps\Models\FileReference.cs" />
-    <Compile Include="Apps\Models\PasswordInfo.cs" />
-    <Compile Include="Apps\MVVM\DelegateCommand.cs" />
-    <Compile Include="Apps\MVVM\DelegateCommandBase.cs" />
-    <Compile Include="Apps\MVVM\PropertySupport.cs" />
-    <Compile Include="Apps\MVVM\ViewModelBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="Apps\Settings\Serializer.cs" />
-    <Compile Include="Apps\Models\DialogDirection.cs" />
-    <Compile Include="Apps\Models\DialogFilters.cs" />
-    <Compile Include="Apps\Models\FileModel.cs" />
+    <Compile Include="VisualCrypt2\DataTypes\FileModel.cs" />
+    <Compile Include="VisualCrypt2\DataTypes\IFileModel.cs" />
     <Compile Include="VisualCrypt2\Implementations\IEncryptionService.cs" />
-    <Compile Include="Apps\Models\IFileModel.cs" />
-    <Compile Include="Apps\Constants\PortableConstants.cs" />
-    <Compile Include="Apps\Models\SetPasswordDialogMode.cs" />
-    <Compile Include="Apps\Models\StatusBarModel.cs" />
     <Compile Include="VisualCrypt2\DataTypes\MACCipher16.cs" />
     <Compile Include="VisualCrypt2\DataTypes\MessageCipher.cs" />
     <Compile Include="VisualCrypt2\DataTypes\RandomKeyCipher32.cs" />
@@ -130,21 +94,10 @@
     <Compile Include="VisualCrypt2\Infrastructure\ToHexView.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\FormatInvariant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisualCrypt2\LocalizableStrings.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\misc\VisualCrypt.Language\VisualCrypt.Language.csproj">
-      <Project>{CC794610-54C9-4F5F-AC82-005260FBB8DE}</Project>
-      <Name>VisualCrypt.Language</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.Practices.Prism.PubSubEvents, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Prism.PubSubEvents.1.1.2\lib\portable-sl5+windowsphone8+windows8+net40+wpa81\Microsoft.Practices.Prism.PubSubEvents.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
