--- a/Windows Desktop/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
+++ b/Windows Desktop/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
@@ -184,6 +184,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Cryptography\VisualCrypt.Applications.Portable\VisualCrypt.Applications.Portable.csproj">
+      <Project>{8e8852aa-f427-4cd4-bd50-ad3b44e6d57d}</Project>
+      <Name>VisualCrypt.Applications.Portable</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Cryptography\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.Portable.csproj">
       <Project>{a0aefef6-e642-4247-85f6-f2f0b329d935}</Project>
       <Name>VisualCrypt.Cryptography.Portable</Name>
