--- a/Cryptography/VisualCrypt.Applications.Portable/VisualCrypt.Applications.Portable.csproj
+++ b/Cryptography/VisualCrypt.Applications.Portable/VisualCrypt.Applications.Portable.csproj
@@ -97,6 +97,10 @@
       <Project>{CC794610-54C9-4F5F-AC82-005260FBB8DE}</Project>
       <Name>VisualCrypt.Language</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.Portable.csproj">
+      <Project>{a0aefef6-e642-4247-85f6-f2f0b329d935}</Project>
+      <Name>VisualCrypt.Cryptography.Portable</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.Prism.PubSubEvents, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
