--- a/Windows Desktop/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
+++ b/Windows Desktop/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
@@ -252,9 +252,9 @@
       <Project>{8e8852aa-f427-4cd4-bd50-ad3b44e6d57d}</Project>
       <Name>VisualCrypt.Applications.Portable</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Cryptography\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.Portable.csproj">
+    <ProjectReference Include="..\..\Cryptography\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.csproj">
       <Project>{a0aefef6-e642-4247-85f6-f2f0b329d935}</Project>
-      <Name>VisualCrypt.Cryptography.Portable</Name>
+      <Name>VisualCrypt.Cryptography</Name>
     </ProjectReference>
     <ProjectReference Include="..\VisualCrypt.Desktop.ModuleEditor\VisualCrypt.Desktop.ModuleEditor.csproj">
       <Project>{cc737d36-0357-417d-81a1-14077f4b5f1c}</Project>
