--- a/Cryptography/VisualCrypt.Cryptography.UWP/VisualCrypt.Cryptography.UWP.csproj
+++ b/Cryptography/VisualCrypt.Cryptography.UWP/VisualCrypt.Cryptography.UWP.csproj
@@ -119,9 +119,9 @@
     <Content Include="Properties\VisualCrypt.Cryptography.UWP.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.Portable.csproj">
+    <ProjectReference Include="..\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.csproj">
       <Project>{a0aefef6-e642-4247-85f6-f2f0b329d935}</Project>
-      <Name>VisualCrypt.Cryptography.Portable</Name>
+      <Name>VisualCrypt.Cryptography</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
