--- a/Windows Desktop/VisualCrypt.Desktop.Tests/VisualCrypt.Desktop.Tests.csproj
+++ b/Windows Desktop/VisualCrypt.Desktop.Tests/VisualCrypt.Desktop.Tests.csproj
@@ -100,9 +100,9 @@
       <Project>{4c372f99-2c82-4b56-af6c-edf8751acc86}</Project>
       <Name>VisualCrypt.Cryptography.Net</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Cryptography\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.Portable.csproj">
+    <ProjectReference Include="..\..\Cryptography\VisualCrypt.Cryptography.Portable\VisualCrypt.Cryptography.csproj">
       <Project>{a0aefef6-e642-4247-85f6-f2f0b329d935}</Project>
-      <Name>VisualCrypt.Cryptography.Portable</Name>
+      <Name>VisualCrypt.Cryptography</Name>
     </ProjectReference>
     <ProjectReference Include="..\VisualCrypt.Desktop.ModuleEditor\VisualCrypt.Desktop.ModuleEditor.csproj">
       <Project>{cc737d36-0357-417d-81a1-14077f4b5f1c}</Project>
