Move EncodingDetection from CrpytoAPI to separate service, Unit Tests

--- a/Common/Cryptography/VisualCrypt.Cryptography.Net/VisualCrypt.Cryptography.Net.csproj
+++ b/Common/Cryptography/VisualCrypt.Cryptography.Net/VisualCrypt.Cryptography.Net.csproj
@@ -24,7 +24,7 @@
     <Prefer32Bit>false</Prefer32Bit>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <RunCodeAnalysis>false</RunCodeAnalysis>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
