--- a/Windows Desktop/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
+++ b/Windows Desktop/VisualCrypt.Desktop.Shared/VisualCrypt.Desktop.Shared.csproj
@@ -25,7 +25,7 @@
     <WarningLevel>4</WarningLevel>
     <NoWarn>0649</NoWarn>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
