--- a/Common/ApplicationLogic/VisualCrypt.Applications/VisualCrypt.Applications.csproj
+++ b/Common/ApplicationLogic/VisualCrypt.Applications/VisualCrypt.Applications.csproj
@@ -26,7 +26,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <RunCodeAnalysis>false</RunCodeAnalysis>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -50,9 +50,11 @@
     <Compile Include="Apps\Models\FileModel.cs" />
     <Compile Include="Apps\Services\AssemblyInfoProvider.cs" />
     <Compile Include="Apps\Events\FileModelChanged.cs" />
+    <Compile Include="Apps\Services\EncodingDetection.cs" />
     <Compile Include="Apps\Services\IAssemblyInfoProvider.cs" />
     <Compile Include="Apps\Services\IBrowserService.cs" />
     <Compile Include="Apps\Services\IClipBoardService.cs" />
+    <Compile Include="Apps\Services\IEncodingDetection.cs" />
     <Compile Include="Apps\Services\IFileService.cs" />
     <Compile Include="Apps\Services\ILifeTimeService.cs" />
     <Compile Include="Apps\Services\ILog.cs" />
