--- a/Common/Cryptography/VisualCrypt.Cryptography.Net.Tests/VisualCrypt.Cryptography.Net.Tests.csproj
+++ b/Common/Cryptography/VisualCrypt.Cryptography.Net.Tests/VisualCrypt.Cryptography.Net.Tests.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{463CD309-F817-4881-BF28-3A7AE06B80CE}</ProjectGuid>
+    <ProjectGuid>{1127BA73-B1FC-4B4D-9ED2-20FF2ADEEF4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VisualCrypt.Desktop.Tests</RootNamespace>
-    <AssemblyName>VisualCrypt.Desktop.Tests</AssemblyName>
+    <RootNamespace>VisualCrypt.Cryptography.Net.Tests</RootNamespace>
+    <AssemblyName>VisualCrypt.Cryptography.Net.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -17,7 +17,6 @@
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
     <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,20 +35,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -64,64 +51,18 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="FakeEditorView.cs" />
-    <Compile Include="FindReplaceTests.cs" />
-    <Compile Include="FakeOkMessageBoxService.cs" />
-    <Compile Include="MockEventAggregator.cs" />
+    <Compile Include="Basic_Member_Tests.cs" />
+    <Compile Include="PasswordSanitization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SHA256ManagedMonoTests.cs" />
-    <Compile Include="SecureStringTests.cs" />
-    <Compile Include="TestSetup.cs" />
-    <Compile Include="Tools\SHA256ManagedMono.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\ApplicationLogic\VisualCrypt.Applications\VisualCrypt.Applications.csproj">
-      <Project>{8e8852aa-f427-4cd4-bd50-ad3b44e6d57d}</Project>
-      <Name>VisualCrypt.Applications</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\ApplicationLogic\VisualCrypt.Language\VisualCrypt.Language.csproj">
-      <Project>{cc794610-54c9-4f5f-ac82-005260fbb8de}</Project>
-      <Name>VisualCrypt.Language</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\Cryptography\VisualCrypt.Cryptography.Net\VisualCrypt.Cryptography.Net.csproj">
+    <ProjectReference Include="..\VisualCrypt.Cryptography.Net\VisualCrypt.Cryptography.Net.csproj">
       <Project>{4c372f99-2c82-4b56-af6c-edf8751acc86}</Project>
       <Name>VisualCrypt.Cryptography.Net</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\Cryptography\VisualCrypt.Cryptography\VisualCrypt.Cryptography.csproj">
-      <Project>{a0aefef6-e642-4247-85f6-f2f0b329d935}</Project>
+    <ProjectReference Include="..\VisualCrypt.Cryptography\VisualCrypt.Cryptography.csproj">
+      <Project>{A0AEFEF6-E642-4247-85F6-F2F0B329D935}</Project>
       <Name>VisualCrypt.Cryptography</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\Lib\Microsoft.Practices.ServiceLocation\Microsoft.Practices.ServiceLocation.csproj">
-      <Project>{3C5486BC-B37D-4158-AB26-30DCB9D0D30E}</Project>
-      <Name>Microsoft.Practices.ServiceLocation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\Lib\Prism.Mef.Wpf\Prism.Mef.Wpf.csproj">
-      <Project>{3d6aebe9-f824-4350-a007-eac3cf030338}</Project>
-      <Name>Prism.Mef.Wpf</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\Lib\Prism.Wpf\Prism.Wpf.csproj">
-      <Project>{5912ff03-c72b-4f56-baa1-8642fdbfbc26}</Project>
-      <Name>Prism.Wpf</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\Lib\Prism\Prism.csproj">
-      <Project>{e6c50355-d01e-4caa-884d-d7929861315c}</Project>
-      <Name>Prism</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VisualCrypt.Desktop.ModuleEditor\VisualCrypt.Desktop.ModuleEditor.csproj">
-      <Project>{cc737d36-0357-417d-81a1-14077f4b5f1c}</Project>
-      <Name>VisualCrypt.Desktop.ModuleEditor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VisualCrypt.Desktop.ModuleEncryption\VisualCrypt.Desktop.ModuleEncryption.csproj">
-      <Project>{6e63beea-4535-4428-ac54-01885f74c77e}</Project>
-      <Name>VisualCrypt.Desktop.ModuleEncryption</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VisualCrypt.Desktop.Shared\VisualCrypt.Desktop.Shared.csproj">
-      <Project>{1a98f3e7-2163-46ce-9b6a-e204fff4f3b8}</Project>
-      <Name>VisualCrypt.Desktop.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VisualCrypt.Desktop\VisualCrypt.Desktop.csproj">
-      <Project>{165228e4-5fe9-4a20-b97b-60be97299c6c}</Project>
-      <Name>VisualCrypt.Desktop</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
